kubernetes/operators/volsync/operator/app/namespace.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: volsync-system
  labels:
    app.kubernetes.io/name: volsync
    goldilocks.fairwinds.com/enabled: "true"
