kubernetes/operators/volsync/operator/app/networkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/v1/networkpolicy.json
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-volsync-egress
  namespace: volsync-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.96.0.10/32
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32
      ports:
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-volsync-metrics-ingress
  namespace: volsync-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8443
